welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:2: error: ';' expected but ',' found.
estSurBiscuit(), porteBiscuit(), prendBiscuit() et poseBiscuit()
               ^