welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
estSurBiscuit(), porteBiscuit(), prendBiscuit() et poseBiscuit()

while ( !estSurBiscuit)
{
avance()	
}
